--- a/HTML/ConsultaFuncionarios.html
+++ b/HTML/ConsultaFuncionarios.html
@@ -128,21 +128,21 @@
       </tr>
       <tr>
         <td>876543210-00</td>
-        <td>Abraham Lincoln</td>
+        <td>Larisa dalla Lariva</td>
         <td>Avenida das Flores 436 - Xanxere</td>
         <td> <img src="../Img/ferramenta-lapis.png" width="20px"> 
           <img id="image" src="../Img/lixeira.png" width="20px"></td>
       </tr>
       <tr>
         <td>000989432-11</td>
-        <td>Getulio Vargas</td>
+        <td>Julia Vargas</td>
         <td>Rua Florianopolis 777 - Chapecó - SC</td>
         <td> <img src="../Img/ferramenta-lapis.png" width="20px"> 
         <img id="image" src="../Img/lixeira.png" width="20px"></td>
       </tr>
       <tr>
         <td>043289632-11</td>
-        <td>Sandrinho Boca Mágica</td>
+        <td>Sandra Insert</td>
         <td>Rua Infernal 666 - Chapecó - SC</td>
         <td> <img src="../Img/ferramenta-lapis.png" width="20px"> 
         <img id="image" src="../Img/lixeira.png" width="20px"></td>
